--- a/helloworld.html
+++ b/helloworld.html
@@ -8,6 +8,6 @@
         <h1>Hello, world!</h1>
         <h2>Nice to see you</h2>
         <p>Happy to see you!</p>
-        <a href="http://www.microsoft.com>Microsoft Homepage</a>
+        <a href="http://www.microsoft.com">Microsoft Homepage</a>
     </body>
 </html>
