--- a/aboutwhale.html
+++ b/aboutwhale.html
@@ -12,6 +12,7 @@
         <article>
             <section>
                 <h2>Introduction to Whales</h2>
+                <img src="/bluewhale.jpg" alt="bluewhale">
                 <p>Whales are a group of aquatic placental marine mammals. They are not fish so they have to breathe on the surface of water.</p>
                 
                 <section>
