--- a/aboutwhale.html
+++ b/aboutwhale.html
@@ -7,12 +7,12 @@
     <body>
         <header>
             <h1>Welcome to the world of whale</h1>
-            <p>Right here, let's discover this subtle animals</p>
+            <p id="top">Right here, let's discover this subtle animals</p>
         </header>
         <article>
             <section>
                 <h2>Introduction to Whales</h2>
-                <img src="/bluewhale.jpg" alt="bluewhale">
+                <img src="bluewhale.jpg" alt="bluewhale">
                 <p>Whales are a group of aquatic placental marine mammals. They are not fish so they have to breathe on the surface of water.</p>
                 
                 <section>
@@ -32,6 +32,7 @@
                     <li>"whale" comes from the Old English hwæl</li>
                 </ul>
             </section>
+            <a href="#top">Back to top</a>
         </article>
     </body>
 </html>
