--- a/helloworld.html
+++ b/helloworld.html
@@ -9,5 +9,6 @@
         <h2>Nice to see you</h2>
         <p>Happy to see you!</p>
         <a href="http://www.microsoft.com">Microsoft Homepage</a>
+        <input type="text" placeholder="Enter something"/>
     </body>
 </html>
