--- a/aboutwhale.html
+++ b/aboutwhale.html
@@ -12,15 +12,15 @@
         <article>
             <section>
                 <h2>Introduction to Whales</h2>
-                <img src="bluewhale.jpg" alt="bluewhale">
+                <a href="https://www.nationalgeographic.com/animals/mammals/b/blue-whale/"><img src="bluewhale.jpg" alt="bluewhale"></a>
                 <p>Whales are a group of aquatic placental marine mammals. They are not fish so they have to breathe on the surface of water.</p>
                 
                 <section>
                     <h3>Whales size comparison from big to small</h3>
                     <ol>
-                        <li>Blue whale</li>
-                        <li>Sperm whale</li>
-                        <li>Killer whale</li>
+                        <li><a href="https://en.wikipedia.org/wiki/Blue_whale">Blue whale</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/Sperm_whale">Sperm whale</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/Killer_whale">Killer whale</a></li>
                 </ol>
                 </section>
             </section>
