--- a/helloworld.html
+++ b/helloworld.html
@@ -10,5 +10,12 @@
         <p>Happy to see you!</p>
         <a href="http://www.microsoft.com">Microsoft Homepage</a>
         <input type="text" placeholder="Enter something"/>
+        <input type="textarea" placeholder="Hello"/>
+        <select>
+            <option value="red">Red</option>
+            <option value="orange">Orange</option>
+            <option value="yellow">Yellow</option>
+            <option value="green" selected >Green</option>
+          </select>
     </body>
 </html>
